--- a/styles.css
+++ b/styles.css
@@ -1112,13 +1112,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 262px;
+  width: 290px;
   height: 300px;
   background-color: #fff;
   border-radius: 8px;
   padding: 22px 62px 32px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   transition: background-color 0.2s linear, color 0.2s linear;
+}
+@media screen and (min-width: 400px) {
+  .cards__list-item {
+    width: 262px;
+  }
 }
 .cards__list-item:hover {
   background-color: #3142c6;
