--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -82,7 +82,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 262px;
+      width: 290px;
       height: 300px;
       background-color: $color-light;
       border-radius: 8px;
@@ -90,6 +90,10 @@
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1),
         inset 0px 1px 0px rgba(255, 255, 255, 0.1);
       transition: background-color 0.2s linear, color 0.2s linear;
+
+      @media screen and (min-width: $media-400) {
+        width: 262px;
+      }
     }
 
     &-item:hover {
