--- a/styles.css
+++ b/styles.css
@@ -554,10 +554,6 @@
   margin-bottom: 22px;
 }
 .features__content-title {
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 30px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   max-width: 462px;
   margin-bottom: 22px;
@@ -715,10 +711,6 @@
   margin-bottom: 22px;
 }
 .engage__content-title {
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 30px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   max-width: 462px;
   margin: 0 auto;
@@ -821,10 +813,6 @@
   }
 }
 .manage__content-inner-title {
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 30px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   max-width: 462px;
   margin-bottom: -8px;
@@ -928,10 +916,6 @@
   margin-bottom: 22px;
 }
 .communicate__content-title {
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 30px;
   max-width: 462px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   margin-bottom: 29px;
@@ -945,9 +929,7 @@
 .communicate__content-divider {
   display: none;
   width: 150px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(43, 41, 45, 0.1);
+  border: 1px solid rgba(43, 41, 45, 0.1);
   margin-top: 90px;
 }
 @media screen and (min-width: 1400px) {
@@ -971,13 +953,16 @@
   color: rgba(43, 41, 45, 0.6);
   text-align: center;
 }
-.communicate__content-divider--mobile {
+.communicate__divider {
+  width: 150px;
+  border: 1px solid rgba(43, 41, 45, 0.1);
+  margin-top: 90px;
   display: flex;
   align-self: self-start;
   margin: 0;
 }
 @media screen and (min-width: 400px) {
-  .communicate__content-divider--mobile {
+  .communicate__divider {
     display: none;
   }
 }
@@ -1058,10 +1043,6 @@
   }
 }
 .audience__content-title {
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 30px;
   max-width: 555px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   letter-spacing: -0.36px;
@@ -1316,10 +1297,6 @@
   }
 }
 .hiring__content-title {
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 30px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   margin-bottom: 22px;
 }
@@ -1740,6 +1717,13 @@
 
 .show {
   display: block;
+}
+
+.title {
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1;
+  margin-bottom: 30px;
 }
 
 .sr-only {
