--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -31,6 +31,9 @@
     }
 
     &-title {
+      font-size: 56px;
+      font-weight: 700;
+      line-height: 1;
       max-width: 555px;
       font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
       letter-spacing: -0.36px;
